cmake_minimum_required(VERSION 2.8)
INCLUDE(FindPkgConfig)
INCLUDE(UsePkgConfig)

# --- general project setup ---
PROJECT("RoboticsCoordinateTransformTools")
SET(RCTTOOLS_NAME rct-tools)
SET(RCTTOOLS_VERSION_MAJOR "1")
SET(RCTTOOLS_VERSION_MINOR "0")
SET(RCTTOOLS_VERSION_REVISION "0")
SET(RCTTOOLS_VERSION_SHORT "${RCTTOOLS_VERSION_MAJOR}.${RCTTOOLS_VERSION_MINOR}")
SET(RCTTOOLS_VERSION "${RCTTOOLS_VERSION_MAJOR}.${RCTTOOLS_VERSION_MINOR}.${RCTTOOLS_VERSION_REVISION}")

SET(PREFIX ${CMAKE_INSTALL_PREFIX})
SET(BINDIR "${PREFIX}/bin")
SET(INCLUDEDIR "${PREFIX}/include")
SET(MANDIR "${PREFIX}/man")
SET(LIBDIR "${PREFIX}/lib/")
SET(DATADIR "${PREFIX}/share/${PACKET}")

SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)

# --- dependencies ---
#rsc
FIND_PACKAGE(RCT ${RCTTOOLS_VERSION_SHORT} REQUIRED)
MESSAGE(STATUS "RCT version: ${RCT_VERSION}")
MESSAGE(STATUS "RCT libraries: ${RCT_LIBRARIES}")
MESSAGE(STATUS "RCT runtime library dirs: ${RCT_RUNTIME_LIBRARY_DIRS}")
INCLUDE_DIRECTORIES(BEFORE SYSTEM ${RCT_INCLUDE_DIRS})
LINK_DIRECTORIES(${RCT_LIBRARY_DIRS})
ADD_DEFINITIONS(${RCT_CFLAGS})

SET(PROJECT_CMAKE_PATH "${CMAKE_INSTALL_PREFIX}/share/cmake/Modules")
#SET(CMAKE_MODULE_PATH ${PROJECT_CMAKE_PATH} ${CMAKE_MODULE_PATH} ${RSC_CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/cmake/Modules )
SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake/Modules )
MESSAGE(STATUS "Using CMake module path: ${CMAKE_MODULE_PATH}")

FIND_PACKAGE(Eigen3 REQUIRED)
INCLUDE_DIRECTORIES(BEFORE SYSTEM  ${Eigen3_INCLUDE_DIRS})
LINK_DIRECTORIES(${Eigen3_LIBRARY_DIRS})

FIND_PACKAGE(Log4cxx REQUIRED)
INCLUDE_DIRECTORIES(BEFORE SYSTEM  ${Log4cxx_INCLUDE_DIRS})
LINK_DIRECTORIES(${Log4cxx_LIBRARY_DIRS})

#boost
FIND_PACKAGE(Boost REQUIRED QUIET COMPONENTS thread program_options date_time)
INCLUDE_DIRECTORIES(Boost_INCLUDE_DIRS)
ADD_DEFINITIONS(-DBOOST_LOG_DYN_LINK)

# --- build instructions ---
ADD_SUBDIRECTORY(src)
